--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
-    "\n",
+    "zeros_matrix =\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
