--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,7 @@
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
-    "zeros_matrix = np.matlib.zeros(21, 12)\n",
+    "zeros_matrix = np..zeros(21, 12)\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "       0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
