--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -259,6 +259,17 @@
      "output_type": "stream",
      "text": [
       "The file has 21 lines.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "data type not understood",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-1ddfcd81392e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#Your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#Pseudocode outline below\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mzeros_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m21\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;31m#1) Create a matrix of zeros that is the same size of the file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: data type not understood"
      ]
     }
    ],
@@ -274,7 +285,7 @@
     "\n",
     "#Your code here\n",
     "#Pseudocode outline below\n",
-    "zeros_matrix = np..zeros(21, 12)\n",
+    "zeros_matrix = np.zeros(21, 12)\n",
     "#1) Create a matrix of zeros that is the same size of the file\n",
     "#2) Iterate through the file: \"for line in f:\" Hint: using enumerate will also be required\n",
     "    #3) Update each row of the matrix with the new stream of data\n",
