--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,8 @@
    "outputs": [],
    "source": [
     "#Your code here\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import ma"
    ]
   },
   {
