--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "#Your code here\n",
     "import numpy as np\n",
-    "import ma"
+    "import matplotlib.pyplo"
    ]
   },
   {
