--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import numpy as np\n",
-    "import matplotlib.pyplo"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
