Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -44,13 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy.matlib"
    ]
   },
   {
